contrast fix

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ time, mark, audio, video {
 
 body {
     line-height:1;
-    background-color:#638a3c;
+    background-color:#ffffff;
     font-family:Georgia, Arial;
 }
 
